k8s/api-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: smartretailx
  labels:
    app: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
      - name: api-gateway
        image: 595529181954.dkr.ecr.us-east-1.amazonaws.com/smartretailx-api-gateway:v1.0.0
        ports:
        - containerPort: 8000
        resources:
          limits:
            cpu: "250m"
            memory: "256Mi"
          requests:
            cpu: "100m"
            memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: smartretailx
spec:
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: api-gateway
  type: LoadBalancer
