k8s/inventory.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-service
  namespace: smartretailx
  labels:
    app: inventory-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: inventory-service
  template:
    metadata:
      labels:
        app: inventory-service
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "8005"
    spec:
      containers:
      - name: inventory-service
        image: 595529181954.dkr.ecr.us-east-1.amazonaws.com/smartretailx-inventory-service:v1.0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 8005
        resources:
          limits:
            cpu: "250m"
            memory: "256Mi"
          requests:
            cpu: "100m"
            memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
  namespace: smartretailx
spec:
  ports:
  - port: 8005
    targetPort: 8005
    nodePort: 30085
  selector:
    app: inventory-service
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: rds-postgres-service
  namespace: smartretailx
spec:
  type: ExternalName
  externalName: prod-payments-db.c4v466m6cial.us-east-1.rds.amazonaws.com
