k8s/notifications.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: smartretailx
  labels:
    app: notification-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "8006"
    spec:
      containers:
      - name: notification-service
        image: 595529181954.dkr.ecr.us-east-1.amazonaws.com/smartretailx-notification-service:v1.0.0
        ports:
        - containerPort: 8006
        resources:
          limits:
            cpu: "250m"
            memory: "256Mi"
          requests:
            cpu: "100m"
            memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: smartretailx
spec:
  ports:
  - port: 8006
    targetPort: 8006
  selector:
    app: notification-service
  type: ClusterIP
