k8s/orders.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: smartretailx
  labels:
    app: order-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "8003"
    spec:
      containers:
      - name: order-service
        image: 595529181954.dkr.ecr.us-east-1.amazonaws.com/smartretailx-order-service:v1.0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 8003
        resources:
          limits:
            cpu: "250m"
            memory: "256Mi"
          requests:
            cpu: "100m"
            memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: smartretailx
spec:
  ports:
  - port: 8003
    targetPort: 8003
    nodePort: 30083
  selector:
    app: order-service
  type: NodePort
