k8s/payments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
  namespace: smartretailx
  labels:
    app: payment-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: payment-service
  template:
    metadata:
      labels:
        app: payment-service
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "8004"
    spec:
      containers:
      - name: payment-service
        image: 595529181954.dkr.ecr.us-east-1.amazonaws.com/smartretailx-payment-service:v1.0.0
        ports:
        - containerPort: 8004
        resources:
          limits:
            cpu: "250m"
            memory: "256Mi"
          requests:
            cpu: "100m"
            memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: smartretailx
spec:
  ports:
  - port: 8004
    targetPort: 8004
    nodePort: 30084
  selector:
    app: payment-service
  type: NodePort
