k8s/products.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
  namespace: smartretailx
  labels:
    app: product-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "8002"
    spec:
      containers:
      - name: product-service
        image: 595529181954.dkr.ecr.us-east-1.amazonaws.com/smartretailx-product-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8002
        resources:
          limits:
            cpu: "250m"
            memory: "256Mi"
          requests:
            cpu: "100m"
            memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: smartretailx
spec:
  ports:
  - port: 8002
    targetPort: 8002
    nodePort: 30082
  selector:
    app: product-service
  type: NodePort
