k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smartretailx-ingress
  namespace: smartretailx
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  rules:
  - http:
      paths:
      # WebSocket live messaging endpoint
      - path: /ws
        pathType: Prefix
        backend:
          service:
            name: notification-service
            port:
              number: 8006
      # Default: UI Website static asset server
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
